# application-helper

./: .gitattributes  .gitignore  Dockerfile  README.md
backend/cover-letter/: Cargo.toml  start_database
backend/cover-letter/migrations/: 10_resume.sql  11_application.sql  12_cover_letter_generation.sql  13_template_cover_letter.sql  14_template_cover_letter_used_for_generation.sql  15_interview_question.sql  16_feedback.sql  17_interview_questions_status.sql  18_cover_letter_kind_narrowing.sql  19_add_job_language.sql  20_resume_rating.sql  21_cover_letter_generation_feedback.sql  22_remove_unique_constraints.sql  23_application_parameters.sql  24_optional_resume_job.sql  25_remove_application_updated_at_trigger.sql  26_move_word_count_to_parameters.sql  27_move_template_cover_letter_to_parameters.sql  28_add_language_override.sql  29_add_cover_letter_random_seed.sql  2_user_interest.sql  30_drop_cover_letter_generation.sql  31_move_job_into_params.sql  32_cover_letter.sql  33_address_parameters.sql  34_stripe.sql  35_add_cover_letter_text.sql  36_add_json_resume.sql  37_add_parent_revision_id.sql  38_chat_log.sql  39_drop_resume_text_content.sql  3_user.sql  40_headshot.sql  41_fix_headshot.sql  42_headshot_generation.sql  43_headshot_generation_add_user_id.sql  44_headshot_generated_favourite.sql  4_signup_confirmation.sql  5_signup_confirmation_pending.sql  6_session.sql  (+5 more)
backend/cover-letter/src/: credentials.rs  lib.rs  main.rs
backend/cover-letter/src/core/: app_state.rs  error.rs  mod.rs  model.rs
backend/cover-letter/src/db/queries/: application_queries.rs  chat_log.rs  cover_letter.rs  feedback_queries.rs  headshot.rs  headshot_generation.rs  mod.rs  resume_queries.rs  template_cover_letter_queries.rs  user_queries.rs
backend/cover-letter/src/integrations/: claid.rs  mod.rs  prompting.rs  replicate.rs
backend/cover-letter/src/services/: address.rs  application.rs  chat.rs  cover_letter_generation.rs  mod.rs  resume.rs  resume_image_extraction.rs
backend/cover-letter/src/utils/: api_utils.rs  document.rs  mod.rs  rate_limit.rs  send_mail.rs  util.rs
backend/cover-letter/src/web/: mod.rs  server_sent_event.rs  server_sent_event_importai.rs  session.rs
backend/cover-letter/src/web/routes/: anonymous_session.rs  applicant_address.rs  application.rs  mod.rs  (+21 more)
(+162 files in other folders)
